feat: Docker support, Google OAuth, Groq resume AI, lmodern fix, sanitize config